fixed image spacing

--- a/css/style.css
+++ b/css/style.css
@@ -6168,7 +6168,8 @@ button.bg-dark:focus {
 
 .mb-3,
 .my-3 {
-  margin-bottom: 1rem !important; }
+  margin-bottom: 1rem !important;
+  margin-top: 2rem;}
 
 .ml-3,
 .mx-3 {
